--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 /* project.css */
 
@@ -8,6 +9,7 @@
   --pad-y: 2.5rem;
 
   --font-sans: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  --font-serif: "IBM Plex Serif", serif;
 
   --text: #111;
   --muted: #666;
@@ -49,6 +51,10 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+.serif {
+  font-family: var(--font-serif);
 }
 
 header,
@@ -102,21 +108,18 @@ main {
 }
 
 p {
-  margin: 0;
+  margin: 1.25rem 0 0 0;
   font-size: var(--p);
   max-width: 62ch;
 }
 
-main>p {
-  margin-top: 1.25rem;
-}
-
 section {
-  margin-top: 3rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 h2 {
-  margin: 0 0 0.625rem 0;
+  margin: 2rem 0 0.625rem 0;
   font-size: var(--h2);
   font-weight: 400;
   line-height: 1.2;
